--- a/style.css
+++ b/style.css
@@ -124,12 +124,12 @@ nav ul li a {
 }
 
 /* Core Committee Members */
+
 .members {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 40px;
+    grid-gap: 20px;
     margin-top: 50px;
-    justify-content: center;
 }
 
 .President, .Convener, .Outreach, .Treasurer, .FIC {
@@ -141,20 +141,29 @@ nav ul li a {
     justify-content: center;
     align-items: center;
     border-radius: 10px;
-    color: white;
-    transition: box-shadow 0.5s;
+    color: red;
+    text-align: center;
+    padding: 10px;
+    transition: box-shadow 0.5s, transform 0.3s;
 }
 
+.President:hover, .Convener:hover, .Outreach:hover, .Treasurer:hover, .FIC:hover {
+    box-shadow: 0 0 40px 10px rgba(186, 98, 194, 0.8);
+    transform: scale(1.05);
+}
+
+
+
 .President {
-    background-image: url('Images/president.jpg');
+    background-image: url('Images/president.jpeg');
 }
 
 .Convener {
-    background-image: url('Images/convener.jpg');
+    background-image: url('Images/convener.jpeg');
 }
 
 .Outreach {
-    background-image: url('Images/outreach.jpg');
+    background-image: url('Images/outreach.jpeg');
 }
 
 .Treasurer {
@@ -166,24 +175,22 @@ nav ul li a {
 }
 
 .President p, .Convener p, .Outreach p, .Treasurer p, .FIC p {
-    margin-bottom: -200px;
-    color: white;
+    margin-bottom: -370px;
+    color: red;
 }
 
-.Treasurer p {
-    text-align: center;
-    margin-bottom: -165px;
-}
+
 
 .FIC {
     grid-column: span 4;
     margin: auto;
+    margin-top: 50px;
     width: 20%;
 }
 
 .President:hover, .Convener:hover, .Outreach:hover, .Treasurer:hover, .FIC:hover {
     box-shadow: 0 0 40px 10px rgba(186, 98, 194, 0.8);
-}
+} */
 
 /* Events */
 #event {
